--- a/src/style.css
+++ b/src/style.css
@@ -153,11 +153,47 @@ button:hover {
     display: flex;
     border: 5px solid red;
     width: 60%;
-    overflow: hidden;
     position: relative;
-    justify-content: end;
+    justify-content: flex-end;
 }
 
-#background {
-    background-image: url(background.jpg);
+
+.background-animation {
+    display: flex;
+    border: 2px solid orange;
+    height: 50%;
+    width: 100%;
+    position: absolute;
+    justify-content: flex-end;
+}
+
+.chatbox {
+    display: flex;
+    border: 2px solid green;
+    flex-direction: row;
+    width: 100%;
+    height: 70%;
+    position: relative;
+
+}
+
+.chatbox-text {
+    display: flex;
+    border: 2px solid blue;
+    background-image: url('./assets/chatbox_white.png');
+    background-repeat: no-repeat;
+    background-position: right 30%;
+    width: 100%;
+    object-fit: contain;
+}
+
+.animation {
+    display: flex;
+    border: 5px solid purple;
+    position: relative;
+    width: 300px;
+    height: 300px;
+    flex-shrink: 0;
+    object-fit: contain;
+
 }
