--- a/src/style.css
+++ b/src/style.css
@@ -136,7 +136,6 @@ button:hover {
     flex-direction: column;
     align-items: center;
     height: 100%;
-    justify-content: space-evenly;
 
 }
 
@@ -151,8 +150,39 @@ button:hover {
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
+    width: 100%;
+    flex-direction: column;
+    margin: 2rem;
+    padding: 2rem;
+    padding-left: 6rem;
+    padding-right: 6rem;
+    padding-bottom: 3rem;
 }
 
+
+.about-container {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    width: 100%;
+    height: 100%;
+    border: 2px solid green;
+}
+
+.about-item {
+    display: flex;
+    border: 2px solid blue;
+    flex: 1;
+    padding: 20px;
+}
+
+.about-item:first-child {
+    flex: 1; 
+}
+
+.about-item:last-child {
+    flex: 2;
+}
 
 .background-animation {
     display: flex;
@@ -177,7 +207,7 @@ button:hover {
 .chatbox-text {
     display: flex;
     position: relative;
-    border: 2px solid blue;
+    /*border: 2px solid blue; */
     font-size: 10px;
     margin-top: 8%;
     width: 494px;
@@ -188,7 +218,7 @@ button:hover {
 
 .animation {
     display: flex;
-    border: 5px solid purple; 
+    /*border: 5px solid purple; */
     position: relative;
     width: 300px;
     height: 300px;
@@ -200,8 +230,8 @@ button:hover {
 .background-img {
     position: absolute;
     width: 100%;
-    
     object-fit: cover;
+    min-height: 106px;
     z-index: 1;
 }
 
