--- a/src/style.css
+++ b/src/style.css
@@ -136,44 +136,51 @@ button:hover {
     flex-direction: column;
     align-items: center;
     height: 100%;
-
 }
+
 
 .about-content {
     display: flex;
     border: 2px solid red;
-    width: 100%;
     height: 50%;
-    padding: 2rem;
-    padding-left: 50px;
     background-image: url('./assets/aboutme.png');
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
     width: 100%;
     flex-direction: column;
-    margin: 2rem;
+
     padding: 2rem;
     padding-left: 6rem;
     padding-right: 6rem;
-    padding-bottom: 3rem;
+    padding-bottom: 7rem;
+    padding-top: 4rem;
 }
 
 
 .about-container {
     display: flex;
     justify-content: space-between;
-    gap: 20px;
+    gap: 50px;
     width: 100%;
     height: 100%;
-    border: 2px solid green;
+    /*border: 5px solid green;*/
 }
 
 .about-item {
     display: flex;
-    border: 2px solid blue;
+    /*border: 2px solid blue;*/
     flex: 1;
-    padding: 20px;
+}
+
+.about-container img {
+    height: auto;
+    object-fit: cover;
+    flex-shrink: 1;
+
+    border-right: 8px solid #121212;
+    border-bottom: 8px solid #121212;
+    box-shadow: 5px 5px 0px 0px #4f4f4f;
 }
 
 .about-item:first-child {
@@ -188,9 +195,7 @@ button:hover {
     display: flex;
     border: 2px solid orange;
     width: 100%;
-    height: 50%;
-    /*position: absolute;*/
-    justify-content: flex-end;
+    height: 40%;
 }
 
 .chatbox {
@@ -198,10 +203,9 @@ button:hover {
     border: 2px solid green;
     flex-direction: row;
     width: 100%;
-    height: 80%;
     position: relative;
     justify-content: center;
-
+    margin: 4px;
 }
 
 .chatbox-text {
