--- a/src/style.css
+++ b/src/style.css
@@ -136,6 +136,57 @@ button:hover {
     flex-direction: column;
     align-items: center;
     height: 100%;
+    gap: 5px;
+    
+}
+
+.contact-container {
+    display: flex;
+    width: 100%;
+    height: 84px;
+    background-image: url('./assets/contact3.png');
+    background-repeat: no-repeat; 
+    align-items: center;
+    gap: 25px;
+    padding: 1rem;
+
+}
+
+.contact-container img {
+    width: 45px;
+    height: 45px;
+    object-fit: contain;
+}
+
+.contact-button {
+    display: flex;
+    width: 35px;
+    height: 35px;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    transition: transform 0.2s ease;
+}
+
+.button1 {
+    background-image: url('./assets/github.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.button2 {
+    background-image: url('./assets/envelope.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.button3 {
+    background-image: url('./assets/linkedin.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 
@@ -145,16 +196,15 @@ button:hover {
     height: 50%;
     background-image: url('./assets/aboutme.png');
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: 100% auto;
     background-position: center;
     width: 100%;
+    
     flex-direction: column;
+    padding: 5rem;
+    padding-top: 2rem;
+    padding-bottom: 5rem;
 
-    padding: 2rem;
-    padding-left: 6rem;
-    padding-right: 6rem;
-    padding-bottom: 7rem;
-    padding-top: 4rem;
 }
 
 
@@ -165,6 +215,7 @@ button:hover {
     width: 100%;
     height: 100%;
     /*border: 5px solid green;*/
+    margin-top: 3px;
 }
 
 .about-item {
@@ -177,7 +228,6 @@ button:hover {
     height: auto;
     object-fit: cover;
     flex-shrink: 1;
-
     border-right: 8px solid #121212;
     border-bottom: 8px solid #121212;
     box-shadow: 5px 5px 0px 0px #4f4f4f;
