--- a/src/style.css
+++ b/src/style.css
@@ -201,7 +201,7 @@ button:hover {
     display: flex;
     /*border: 2px solid red;*/
     height: 50%;
-    background-image: url('./assets/aboutme.png');
+    background-image: url('./assets/aboutme3.png');
     background-repeat: no-repeat;
     background-size: 100% auto;
     background-position: center;
