--- a/src/style.css
+++ b/src/style.css
@@ -13,14 +13,6 @@
     src: url('./fonts/PixelOperator8.ttf') format('truetype');
 }
 
-
-.pixelify-sans{
-  font-family: "Pixelify Sans", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;
-}
-
 * {
     margin: 0;
     padding: 0;
@@ -35,6 +27,21 @@ body {
     padding: 0;
     letter-spacing: 0.10em;
 }
+
+button {
+    display:flex;
+    position: relative;
+    background: none;
+    border: none;
+    padding: 0px;
+    cursor: pointer;
+    transition: transform 0.2s ease;
+}
+
+button:hover {
+    transform: scale(1.1);
+}
+
 
 .header {
     padding: 20px;
@@ -66,20 +73,6 @@ body {
     display: block;
     width: 100px;
     height: 40px;
-}
-
-button {
-    display:flex;
-    position: relative;
-    background: none;
-    border: none;
-    padding: 0px;
-    cursor: pointer;
-    transition: transform 0.2s ease;
-}
-
-button:hover {
-    transform: scale(1.1);
 }
 
 .about:hover {
@@ -131,12 +124,12 @@ button:hover {
     position: relative;
     background-size: cover;
     justify-content: center;
-    background-image: url('./assets/background.jpg');
+    background-image: url('./assets/background.jpg'); /*sky background*/
 }
 
 .background-section {
     display: flex;
-    border: 5px solid #ececec;
+    /*border: 5px solid #ececec;*/
     width: 60%;
     position: relative;
     flex-direction: column;
@@ -149,8 +142,8 @@ button:hover {
 .contact-container {
     display: flex;
     width: 100%;
-
-    background-image: url('./assets/contact3.png');
+    border: 5px solid #121212;
+    background-image: url('./assets/contact4.png');
     background-repeat: no-repeat; 
     background-size: contain;
     align-items: center;
@@ -199,11 +192,12 @@ button:hover {
 
 .about-content {
     display: flex;
-    /*border: 2px solid red;*/
+
     height: 50%;
     background-image: url('./assets/aboutme3.png');
     background-repeat: no-repeat;
-    background-size: 100% auto;
+    /*background-size: 100% auto;*/
+    background-size: 100% 100%;
     background-position: center;
     width: 100%;
     
@@ -282,7 +276,7 @@ button:hover {
 .chatbox-text {
     display: flex;
     position: relative;
-    /*border: 2px solid blue; */
+    border: 2px solid blue; 
     font-size: 10px;
     margin-top: 8%;
     width: 494px;
@@ -293,7 +287,7 @@ button:hover {
 
 .animation {
     display: flex;
-    /*border: 5px solid purple; */
+    border: 5px solid purple; 
     position: relative;
     width: 300px;
     height: 300px;
@@ -358,3 +352,105 @@ button:hover {
 }
 
 
+/* screen size breakpoints */
+
+@media (min-width: 2560px) {
+    .name {
+        font-size: 3rem;
+    }
+
+    .button-text {
+        font-size: 2rem;
+    }
+
+    .animation {
+        /*need to contain animation to make bigger*/
+
+    }
+
+   .contact-container {
+        height: 120px;
+        gap: 30px;
+   }
+
+   .contact-container img {
+        width: 60px;
+        height: 60px;
+   }
+
+   .contact-button {
+        width: 50px;
+        height: 50px;
+   }
+
+    .about,
+    .projects {
+        width: 150px;
+        height: 60px;
+    }
+
+    .about-content {
+        padding: 2rem;
+        padding-left: 5rem;
+        padding-right: 5rem;
+        padding-bottom: 8rem;
+    }
+
+    .about-content h2 {
+        font-size: 3rem;
+    }
+
+
+    .about-container p {
+        font-size: 2.5rem;
+    }
+
+
+    /*increase size of chat bubble
+    increase text size of chat bubble
+    move chat bubble*/
+    .chatbox-text {
+        width: 600px;
+        height: 100px;
+        margin-top: 10%;
+        padding-bottom: 10px;
+    }
+
+    .animation {
+        transform: scale(1.2);
+    }
+
+    .text {
+        font-size: 2.5rem;
+        align-items: center;
+    }
+
+}
+
+
+
+@media (max-width: 1280px) {
+
+}
+
+@media (max-width: 1024px) {
+    
+}
+
+@media (max-width: 768px) {
+    
+}
+
+@media (max-width: 640px) {
+
+}
+
+@media (max-width: 320px) {
+    .name {
+        font-size: 1.5rem;
+    }
+
+    .links {
+        display:none;
+    }
+}
